# halide_projects

halide_histogram/: CMakeLists.txt  readme.md
halide_histogram/src/: histogram_equalisation.cpp  histogram_equalisation.h  main.cpp
